--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,24 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .container{
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 13px;
+    border-radius: 5px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 /* top players styles */
+.top-players{
+    margin-bottom: 30px;
+}
 .section-title{
     color: #562EFF;
     font-size: 24px;
@@ -37,4 +47,70 @@ main{
 }
 .player-name{
     margin-left: 16px;
+    font-size: 18px;
 }
+/*----------------
+top blogs styles
+------------------*/
+
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 25px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbniles img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 10px;
+}
+.blog-title{
+    font-size: 20px;
+    color: #000000;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    color: #562EFF;
+    font-size: 16px;
+}
+/* course style */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+.course{
+
+}
+.course .courses-banner img{
+    width: 224px;
+    height: 104px;
+}
+
+.course-rating{
+    display: flex;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.golden-color{
+    color: #FFC014;
+}
+.fa-star.gray-color{
+    color: #AEAEAE;
+}
+
+/*------------------
+    @media queries  
+----------------------*/
+/* .mobiles device */
+
